[tool.poetry]
name = "pynetrees"
version = "1.0.1"
description = "Tools to work with decision trees"
authors = ["François Trahan <francois.trahan@gmail.com>"]
license = "GPL-3.0"

homepage = "https://github.com/francoistrahan/pynes"
repository = "https://github.com/francoistrahan/pynes.git"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "0.23.4"
seaborn = "^0.9.0"
matplotlib = "^3.0"
graphviz = "^0.10.1"

jupyter = {version="^1.0", optional = true }


# Need to lock tornado, as there is a bug past 6
tornado = {version="^5.1.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[tool.poetry.extras]
examples = ["jupyter"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
